# internal/delivery/http/handlers/order_handler.go
@@ -1,7 +1,10 @@
 package handlers
 
 import (
+	"net/http"
+
 	"github.com/LavaJover/shvark-api-gateway/internal/client"
+	"github.com/LavaJover/shvark-api-gateway/internal/domain"
 	"github.com/gin-gonic/gin"
 )
 
@@ -20,8 +23,43 @@ func NewOrderHandler(addr string) (*OrderHandler, error) {
 	}, nil
 }
 
+// @Summary Create new Pay-In order
+// @Description Create new Pay-In order
+// @Tags orders
+// @Accept json
+// @Produce json
+// @Param input body CreateOrderRequest true "new order details"
+// @Success 200 {object} CreateOrderResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /orders [post]
 func (h *OrderHandler) CreateOrder(c *gin.Context) {
+	var request CreateOrderRequest
+	if err := c.ShouldBindJSON(&request); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
 
+	orderRequest := domain.Order{
+		MerchantID: request.MerchantID,
+		Amount: request.Amount,
+		Currency: request.Currency,
+		Country: request.Country,
+		ClientEmail: request.ClientEmail,
+		MetadataJSON: request.Metadata,
+		PaymentSystem: request.PaymentSystem,
+	}
+
+	response, err := h.OrderClient.CreateOrder(&orderRequest)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, OrderResponse{
+		OrderID: response.Order.OrderId,
+		OrderStatus: response.Order.Status.String(),
+	})
 }
 
 type CreateOrderRequest struct {
